fix: remove grid dp for width overflow and want viewport fill screen

--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -1,14 +1,13 @@
 .layout--page {
   .page__viewport {
-    // width: 100vw; // overflow x
-    display: grid;
+    width: 100vw;
     min-height: 100vh;
+    @include flexbox();
+    .page__main, .grid {
+      width: 100%;
+      @include flex(1);
+    }
   }
-}
-
-.page__main {
-  // height: 100%;
-  display: inline;
 }
 
 .page__main-inner {
